DevAccount/src/objects/CustomCondition__c.object
<CustomObject>
    <description>This object governs the conditions to hide any custom buttons on the detail page of an object as part of a Condition Set.</description>
    <fields>
        <fullName>ConditionSet__c</fullName>
        <description>The parent Condition Set.</description>
        <inlineHelpText>The parent Condition Set.</inlineHelpText>
        <label>Condition Set</label>
        <referenceTo>ConditionSet__c</referenceTo>
        <relationshipLabel>Custom Conditions</relationshipLabel>
        <relationshipName>CustomConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomButtonAPIName__c</fullName>
        <description>The API Name of the custom button.</description>
        <inlineHelpText>The API Name of the custom button.</inlineHelpText>
        <label>Custom Button API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideControlField__c</fullName>
        <description>The controlling field API Name that must evaluate to true to hide the button.</description>
        <inlineHelpText>The controlling field API Name that must evaluate to true to hide the button.</inlineHelpText>
        <label>Hide Control Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Condition</label>
    <nameField>
        <displayFormat>CUS{000000}</displayFormat>
        <label>SObjectCustomButtonCondition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>